force-app/main/default/objects/PMC_DH_StatusCodeMessageMapping__mdt/PMC_DH_StatusCodeMessageMapping__mdt.object-meta.xml
<CustomObject>
    <description>This metadata will be used for mapping Status code with Message with respect to Modules</description>
    <label>PMC DH StatusCodeMessageMapping</label>
    <pluralLabel>PMC DH StatusCodeMessageMappings</pluralLabel>
</CustomObject>