force-app/main/default/objects/PMC_DH_StatusCodeMessageMapping__mdt/fields/strMessageCustomLabelApiName__c.field-meta.xml
<CustomField>
    <fullName>strMessageCustomLabelApiName__c</fullName>
    <label>Message (Custom Label API Name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>