force-app/main/default/objects/PMC_DH_StatusCodeMessageMapping__mdt/fields/strModule__c.field-meta.xml
<CustomField>
    <fullName>strModule__c</fullName>
    <label>Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>