force-app/main/default/objects/PMC_DH_StatusCodeMessageMapping__mdt/fields/strStatusCode__c.field-meta.xml
<CustomField>
    <fullName>strStatusCode__c</fullName>
    <label>Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>